<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/culc">

    <Button
        android:id="@+id/startButton"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:text="Start"
        android:translationX="300dp"
        android:translationY="250dp"
        android:background = "@drawable/round_button"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:translationX="190dp" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:text="@string/quit_button_text"
        android:translationX="300dp"
        android:translationY="215dp"
        android:background = "@drawable/round_button"
        android:textColor="@android:color/white"/>
</LinearLayout>