<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameLayout"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="452dp"
        android:textStyle="bold" />

<!--    <Button-->
<!--        android:id="@+id/downButton"-->
<!--        android:layout_width="48dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginEnd="72dp"-->
<!--        android:background="#0A000000"-->
<!--        android:text="▼"-->
<!--        android:textAllCaps="false" />-->

<!--    <Button-->
<!--        android:id="@+id/upButton"-->
<!--        android:layout_width="48dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginEnd="72dp"-->
<!--        android:background="#0A000000"-->
<!--        android:text="▲" />-->

<!--    <Button-->
<!--        android:id="@+id/leftButton"-->
<!--        android:layout_width="48dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginEnd="120dp"-->
<!--        android:background="#0A000000"-->
<!--        android:text="◀" />-->

<!--    <Button-->
<!--        android:id="@+id/rightButton"-->
<!--        android:layout_width="48dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:background="#0A000000"-->
<!--        android:text="▶" />-->

</LinearLayout>